--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/marqroldan/react-native-flexgridlayout/issues"
   },
-  "homepage": "https://github.com/marqroldan/react-native-flexgridlayout#readme"
+  "homepage": "https://github.com/marqroldan/react-native-flexgridlayout#readme",
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  }
 }
