--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "react-native-flexgridlayout",
   "version": "0.0.1",
   "description": "Flex Grid Layout for React Native",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,13 +12,22 @@
     "url": "git+https://github.com/marqroldan/react-native-flexgridlayout.git"
   },
   "author": "Marq Roldan <hcmlroldan@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/marqroldan/react-native-flexgridlayout/issues"
   },
   "homepage": "https://github.com/marqroldan/react-native-flexgridlayout#readme",
+  "devDependencies": {
+    "typescript": "^4.4.4",
+    "react": "17.0.2",
+    "react-native": "0.68.0",
+    "@types/react-native": "^0.67.3"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   }
 }
